# CalcLib

./: .gitignore  CMakeLists.txt  License.txt  README.md
Code/AlgebraLibraries/ScalarAlgebra/: Expression.cpp
Code/Calculator/: ClassInfo.cpp  Evaluator.cpp  String.cpp
Code/Calculator/Environments/ArbitraryPrecisionEnv/: RationalNumber.cpp
Code/Calculator/Environments/GeometricAlgebraEnv/: MultivectorMathFunc.cpp
