# CMakeLists.txt for CalcLib static library

cmake_minimum_required(VERSION 2.27)

project(CalcLib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CALCLIB_SOURCES
	Code/AlgebraLibraries/GeometricAlgebra/Blade.cpp
	Code/AlgebraLibraries/GeometricAlgebra/Blade.h
	Code/AlgebraLibraries/GeometricAlgebra/CompositeVector.cpp
	Code/AlgebraLibraries/GeometricAlgebra/CompositeVector.h
	Code/AlgebraLibraries/GeometricAlgebra/GeometricAlgebra.h
	Code/AlgebraLibraries/GeometricAlgebra/MotherVector.cpp
	Code/AlgebraLibraries/GeometricAlgebra/MotherVector.h
	Code/AlgebraLibraries/GeometricAlgebra/PseudoVersor.cpp
	Code/AlgebraLibraries/GeometricAlgebra/PseudoVersor.h
	Code/AlgebraLibraries/GeometricAlgebra/SumOfBlades.cpp
	Code/AlgebraLibraries/GeometricAlgebra/SumOfBlades.h
	Code/AlgebraLibraries/GeometricAlgebra/SumOfPseudoVersors.cpp
	Code/AlgebraLibraries/GeometricAlgebra/SumOfPseudoVersors.h
	Code/AlgebraLibraries/GeometricAlgebra/Vector.cpp
	Code/AlgebraLibraries/GeometricAlgebra/Vector.h
	Code/AlgebraLibraries/LinearAlgebra/Element.cpp
	Code/AlgebraLibraries/LinearAlgebra/Element.h
	Code/AlgebraLibraries/LinearAlgebra/LinearAlgebra.h
	Code/AlgebraLibraries/LinearAlgebra/Matrix.cpp
	Code/AlgebraLibraries/LinearAlgebra/Matrix.h
	Code/AlgebraLibraries/ScalarAlgebra/Expression.cpp
	Code/AlgebraLibraries/ScalarAlgebra/Expression.h
	Code/AlgebraLibraries/ScalarAlgebra/RationalExpression.cpp
	Code/AlgebraLibraries/ScalarAlgebra/RationalExpression.h
	Code/AlgebraLibraries/ScalarAlgebra/Scalar.cpp
	Code/AlgebraLibraries/ScalarAlgebra/Scalar.h
	Code/AlgebraLibraries/ScalarAlgebra/ScalarAlgebra.h
	Code/AlgebraLibraries/ScalarAlgebra/VariableEvaluator.cpp
	Code/AlgebraLibraries/ScalarAlgebra/VariableEvaluator.h
	Code/Calculator/CalcLib.h
	Code/Calculator/Calculator.cpp
	Code/Calculator/Calculator.h
	Code/Calculator/Calculus.cpp
	Code/Calculator/Calculus.h
	Code/Calculator/ClassInfo.cpp
	Code/Calculator/ClassInfo.h
	Code/Calculator/Constant.cpp
	Code/Calculator/Constant.h
	Code/Calculator/Environment.cpp
	Code/Calculator/Environment.h
	Code/Calculator/Environments
	Code/Calculator/Evaluator.cpp
	Code/Calculator/Evaluator.h
	Code/Calculator/Function.cpp
	Code/Calculator/Function.h
	Code/Calculator/Language.cpp
	Code/Calculator/Language.h
	Code/Calculator/Number.cpp
	Code/Calculator/Number.h
	Code/Calculator/Operator.cpp
	Code/Calculator/Operator.h
	Code/Calculator/Parser.cpp
	Code/Calculator/Parser.h
	Code/Calculator/String.cpp
	Code/Calculator/String.h
	Code/Calculator/Tokenizer.cpp
	Code/Calculator/Tokenizer.h
	Code/Calculator/Variable.cpp
	Code/Calculator/Variable.h
	Code/Calculator/Environments/ArbitraryPrecisionEnv
	Code/Calculator/Environments/ComplexNumberFieldEnv
	Code/Calculator/Environments/FloatingPointMathEnv
	Code/Calculator/Environments/FractionEnv
	Code/Calculator/Environments/GeometricAlgebraEnv
	Code/Calculator/Environments/LinearAlgebraEnv
	Code/Calculator/Environments/ArbitraryPrecisionEnv/ArbitraryPrecisionEnv.cpp
	Code/Calculator/Environments/ArbitraryPrecisionEnv/ArbitraryPrecisionEnv.h
	Code/Calculator/Environments/ArbitraryPrecisionEnv/ArbitraryPrecisionEnvClasses.h
	Code/Calculator/Environments/ArbitraryPrecisionEnv/BaseConverterFunc.cpp
	Code/Calculator/Environments/ArbitraryPrecisionEnv/BaseConverterFunc.h
	Code/Calculator/Environments/ArbitraryPrecisionEnv/DivLimitFunc.cpp
	Code/Calculator/Environments/ArbitraryPrecisionEnv/DivLimitFunc.h
	Code/Calculator/Environments/ArbitraryPrecisionEnv/RationalNumber.cpp
	Code/Calculator/Environments/ArbitraryPrecisionEnv/RationalNumber.h
	Code/Calculator/Environments/ArbitraryPrecisionEnv/RoundFunc.cpp
	Code/Calculator/Environments/ArbitraryPrecisionEnv/RoundFunc.h
	Code/Calculator/Environments/ComplexNumberFieldEnv/ComplexNumber.cpp
	Code/Calculator/Environments/ComplexNumberFieldEnv/ComplexNumber.h
	Code/Calculator/Environments/ComplexNumberFieldEnv/ComplexNumberFieldEnv.cpp
	Code/Calculator/Environments/ComplexNumberFieldEnv/ComplexNumberFieldEnv.h
	Code/Calculator/Environments/ComplexNumberFieldEnv/ComplexNumberFieldEnvClasses.h
	Code/Calculator/Environments/FloatingPointMathEnv/FloatingPointMathEnv.cpp
	Code/Calculator/Environments/FloatingPointMathEnv/FloatingPointMathEnv.h
	Code/Calculator/Environments/FloatingPointMathEnv/FloatingPointMathEnvClasses.h
	Code/Calculator/Environments/FloatingPointMathEnv/FloatingPointMathFunc.cpp
	Code/Calculator/Environments/FloatingPointMathEnv/FloatingPointMathFunc.h
	Code/Calculator/Environments/FloatingPointMathEnv/FloatNumber.cpp
	Code/Calculator/Environments/FloatingPointMathEnv/FloatNumber.h
	Code/Calculator/Environments/FractionEnv/FractionEnv.cpp
	Code/Calculator/Environments/FractionEnv/FractionEnv.h
	Code/Calculator/Environments/FractionEnv/FractionEnvClasses.h
	Code/Calculator/Environments/FractionEnv/FractionNumber.cpp
	Code/Calculator/Environments/FractionEnv/FractionNumber.h
	Code/Calculator/Environments/GeometricAlgebraEnv/BarFunc.cpp
	Code/Calculator/Environments/GeometricAlgebraEnv/BarFunc.h
	Code/Calculator/Environments/GeometricAlgebraEnv/GeometricAlgebraEnv.cpp
	Code/Calculator/Environments/GeometricAlgebraEnv/GeometricAlgebraEnv.h
	Code/Calculator/Environments/GeometricAlgebraEnv/GeometricAlgebraEnvClasses.h
	Code/Calculator/Environments/GeometricAlgebraEnv/GradePartFunc.cpp
	Code/Calculator/Environments/GeometricAlgebraEnv/GradePartFunc.h
	Code/Calculator/Environments/GeometricAlgebraEnv/InverseFunc.cpp
	Code/Calculator/Environments/GeometricAlgebraEnv/InverseFunc.h
	Code/Calculator/Environments/GeometricAlgebraEnv/MultivectorMathFunc.cpp
	Code/Calculator/Environments/GeometricAlgebraEnv/MultivectorMathFunc.h
	Code/Calculator/Environments/GeometricAlgebraEnv/MultivectorNumber.cpp
	Code/Calculator/Environments/GeometricAlgebraEnv/MultivectorNumber.h
	Code/Calculator/Environments/GeometricAlgebraEnv/ReverseFunc.cpp
	Code/Calculator/Environments/GeometricAlgebraEnv/ReverseFunc.h
	Code/Calculator/Environments/GeometricAlgebraEnv/ScalarPartFunc.cpp
	Code/Calculator/Environments/GeometricAlgebraEnv/ScalarPartFunc.h
	Code/Calculator/Environments/LinearAlgebraEnv/LinearAlgebraEnv.cpp
	Code/Calculator/Environments/LinearAlgebraEnv/LinearAlgebraEnv.h
	Code/Calculator/Environments/LinearAlgebraEnv/LinearAlgebraEnvClasses.h
	Code/Calculator/Environments/LinearAlgebraEnv/MatrixFunctions.cpp
	Code/Calculator/Environments/LinearAlgebraEnv/MatrixFunctions.h
	Code/Calculator/Environments/LinearAlgebraEnv/MatrixNumber.cpp
	Code/Calculator/Environments/LinearAlgebraEnv/MatrixNumber.h
	Code/Utilities/Array.h
	Code/Utilities/Array.hpp
	Code/Utilities/List.cpp
	Code/Utilities/List.h
	Code/Utilities/Map.h
	Code/Utilities/Map.hpp
	Code/Utilities/MultiList.cpp
	Code/Utilities/MultiList.h
	Code/Utilities/ScopeDelete.h
	Code/Utilities/ScopeDelete.hpp
	Code/Utilities/Utilities.h
)

add_library(CalcLib STATIC ${CALCLIB_SOURCES})

target_include_directories(CalcLib PUBLIC Code)